deployment/scrumlr-livequery/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-livequery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-livequery
  template:
    metadata:
      labels: 
        app: scrumlr-livequery
    spec:
      containers:
        - name: scrumlr-livequery
          image: scrumlr-parse
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
      restartPolicy: Always
