deployment/scrumlr-livequery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-livequery
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: scrumlr-livequery
